turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:8: error: identifier expected but '(' found.
			if (rule.(i)==R) droite() else gauche()
                                 ^