turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
	for (i<-0 to Array.length-1)
		if (getCouleurSol()==colors(i)) {
			setCouleurBrosse(colors((i+1)%Array.length))
			baisseBrosse()
			leveBrosse()
			if (rule.(i)==R) droite() else gauche()
			avance()
			}
	 
}
